# finance-router-classifier

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
docs/: DATASET.md  RUNPOD.md
reports/finance-router-training/: README.md  metrics.csv  metrics.json  training_config.json
scripts/: train_runpod.sh
src/finance_router/: __init__.py  cli.py  data.py  labels.py  modeling.py  reporting.py  schema.py
tests/: test_data.py  test_modeling.py  test_reporting.py
